--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         <section id="about" class="py-16 reveal">
             <h2 class="text-2xl font-bold font-heading text-white mb-6 text-left uppercase">About Me</h2>
             <div class="space-y-4 text-base text-gray-300 max-w-4xl text-left">
-                <p>Specializing in MIS and NPET Operations at Airtel, I am passionate about transforming complex data challenges into streamlined, automated solutions. My approach combines deep operational understanding with the power of AI to build Excel solutions that save time, eliminate errors, and drive efficiency.</p>
-                <p>I thrive on finding the logic in chaos and building systems that just <em>work</em>.</p>
+                <p>As an MIS and Operations professional, I specialize in transforming complex backend operations into models of efficiency. My expertise lies in advanced Excel and MIS reporting, where I handle everything from complex data compilation and analysis to rigorous SLA management.</p>
+                <p>What sets my approach apart is the use of AI to power VBA scripting. This allows me to rapidly develop and deploy automated solutions, creating sophisticated dashboards and logical workflows that significantly reduce manual effort and enhance data accuracy. I turn raw data into strategic assets.</p>
             </div>
         </section>
         
@@ -133,7 +133,6 @@
                 <button class="slider-button next" id="timeline-slider-next"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></button>
             </div>
         </section>
-
         
         <!-- Process Section -->
         <section id="process" class="py-16 reveal">
@@ -168,7 +167,7 @@
             <h2 class="text-2xl font-bold font-heading text-white mb-6 uppercase text-left">Projects</h2>
             <p class="text-base text-gray-400 mb-8 max-w-3xl text-left">A selection of projects that demonstrate my ability to translate business needs into efficient, automated solutions.</p>
              <div class="relative">
-                <div class="slider-container -mx-2">
+                <div class="slider-container -mx-2" id="projects-slider-container">
                     <div class="slider-track">
                         <div class="slide">
                             <div class="p-6 h-full rounded-lg bg-[var(--bg-card)] border border-[var(--border-color)] flex flex-col">
