--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <body class="antialiased">
 
     <div class="background-container"></div>
-    <canvas id="plexus-bg"></canvas>
 
     <header id="main-header" class="fixed top-0 left-0 right-0 z-50">
         <nav class="container mx-auto px-4 sm:px-6 py-4 flex justify-between items-center">
@@ -30,6 +29,7 @@
                 <a href="#timeline" class="nav-link-desktop text-sm font-semibold tracking-wide hover:text-white transition-colors">TIMELINE</a>
                 <a href="#process" class="nav-link-desktop text-sm font-semibold tracking-wide hover:text-white transition-colors">PROCESS</a>
                 <a href="#projects" class="nav-link-desktop text-sm font-semibold tracking-wide hover:text-white transition-colors">PROJECTS</a>
+                <a href="#responsibilities" class="nav-link-desktop text-sm font-semibold tracking-wide hover:text-white transition-colors">RESPONSIBILITIES</a>
                 <a href="#contact" class="nav-link-desktop text-sm font-semibold tracking-wide hover:text-white transition-colors">CONTACT</a>
             </div>
 
@@ -50,13 +50,14 @@
             <a href="#timeline" class="mobile-nav-link text-lg font-semibold tracking-wide">TIMELINE</a>
             <a href="#process" class="mobile-nav-link text-lg font-semibold tracking-wide">PROCESS</a>
             <a href="#projects" class="mobile-nav-link text-lg font-semibold tracking-wide">PROJECTS</a>
+            <a href="#responsibilities" class="mobile-nav-link text-lg font-semibold tracking-wide">RESPONSIBILITIES</a>
             <a href="#contact" class="mobile-nav-link text-lg font-semibold tracking-wide">CONTACT</a>
         </nav>
     </div>
 
     <main class="container mx-auto px-4 sm:px-6">
 
-        <section id="hero" class="min-h-screen flex flex-col justify-center text-left py-10">
+        <section id="hero" class="relative min-h-screen flex flex-col justify-center text-left py-10">
             <div class="w-full max-w-3xl">
                 <p class="mb-4 text-base md:text-lg font-medium text-gray-400">MIS | NPET Operations <span class="text-[var(--accent-red)]">@Airtel</span></p>
                 <h1 class="text-4xl md:text-6xl font-bold font-heading text-white">Abhijeet Singh</h1>
@@ -89,6 +90,31 @@
         <section id="timeline" class="py-24"> <div class="flex flex-wrap justify-between items-center mb-10 gap-4"> <h2 class="text-2xl font-bold font-heading text-white uppercase">My Timeline</h2> <div id="timeline-filters" class="flex flex-wrap gap-2 items-center"> <button data-filter="all" class="timeline-filter-button active text-sm px-3 py-1.5 rounded-md">All</button> <button data-filter="experience" class="timeline-filter-button text-sm px-3 py-1.5 rounded-md">Experience</button> <button data-filter="education" class="timeline-filter-button text-sm px-3 py-1.5 rounded-md">Education</button> <div class="w-px h-6 bg-gray-600 mx-2 hidden sm:block"></div> <button data-sort="desc" class="timeline-filter-button active text-sm px-3 py-1.5 rounded-md">Newest First</button> <button data-sort="asc" class="timeline-filter-button text-sm px-3 py-1.5 rounded-md">Oldest First</button> </div> </div> <div class="relative sm:px-8"> <div class="slider-container -mx-3" id="timeline-slider-container"> <div class="slider-track" id="timeline-slider-track"></div> </div> <button class="slider-button prev" id="timeline-slider-prev"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="m15 18-6-6 6-6"/></svg></button> <button class="slider-button next" id="timeline-slider-next"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></button> </div> </section>
         <section id="process" class="py-24"> <h2 class="text-2xl font-bold font-heading text-white mb-12 uppercase text-left">My Process</h2> <div class="relative process-timeline-container max-w-2xl"> <div class="process-timeline-item mb-12"> <div class="process-timeline-dot"></div> <div class="process-timeline-content"> <h3 class="text-lg font-semibold text-white">1. The Logic (The Architect)</h3> <p class="mt-2 text-sm text-gray-400">I deconstruct challenges into a clear, logical framework, defining the <strong>what</strong> and <strong>why</strong> before any code is generated.</p> </div> </div> <div class="process-timeline-item mb-12"> <div class="process-timeline-dot"></div> <div class="process-timeline-content"> <h3 class="text-lg font-semibold text-white">2. The Prompt (The AI Interface)</h3> <p class="mt-2 text-sm text-gray-400">I translate this logic into precise instructions for an AI, generating complex VBA scripts that turn strategy into automation.</p> </div> </div> <div class="process-timeline-item"> <div class="process-timeline-dot"></div> <div class="process-timeline-content"> <h3 class="text-lg font-semibold text-white">3. The Impact (The Result)</h3> <p class="mt-2 text-sm text-gray-400">The result is speed, accuracy, and clarity—reducing report generation from hours to minutes for better, faster decision-making.</p> </div> </div> </div> </section>
         <section id="projects" class="py-24"> <h2 class="text-2xl font-bold font-heading text-white mb-4 uppercase text-left">Projects</h2> <p class="text-base text-gray-400 mb-10 max-w-3xl text-left">A selection of projects that demonstrate my ability to translate business needs into efficient, automated solutions.</p> <div class="relative sm:px-8"> <div class="slider-container -mx-3" id="projects-slider-container"> <div class="slider-track"> <div class="slide"> <div class="slide-content p-6 h-full rounded-lg bg-[var(--bg-card)] border border-[var(--border-color)] flex flex-col"> <h3 class="text-lg font-bold mb-2 text-[var(--accent-red)]">Automated SLA Dashboard</h3> <p class="font-mono text-xs text-[var(--accent-red)]/80 mb-4">TIMELINE: REGULAR</p> <p class="text-sm text-gray-400 mb-4 flex-grow"><strong class="text-gray-200">Challenge:</strong> Weekly SLA report took 8+ hours of manual compilation and was prone to errors.</p> <div class="border-t border-gray-700 pt-4 mt-auto"> <h4 class="font-bold text-white mb-2">Results:</h4> <ul class="space-y-1 text-sm text-gray-300"> <li class="flex items-center"><span class="text-[var(--accent-red)] mr-2">✓</span> <strong>Time Saved:</strong> 8 hours → 2 minutes</li> <li class="flex items-center"><span class="text-[var(--accent-red)] mr-2">✓</span> <strong>Efficiency Gain:</strong> ~99%</li> </ul> </div> </div> </div> <div class="slide"> <div class="slide-content p-6 h-full rounded-lg bg-[var(--bg-card)] border border-[var(--border-color)] flex flex-col"> <h3 class="text-lg font-bold mb-2 text-[var(--accent-red)]">KMs Data Distributor</h3> <p class="font-mono text-xs text-[var(--accent-red)]/80 mb-4">TIMELINE: REGULAR</p> <p class="text-sm text-gray-400 mb-4 flex-grow"><strong class="text-gray-200">Challenge:</strong> Distributing raw data required tedious manual formatting for each file.</p> <div class="border-t border-gray-700 pt-4 mt-auto"> <h4 class="font-bold text-white mb-2">Results:</h4> <ul class="space-y-1 text-sm text-gray-300"> <li class="flex items-center"><span class="text-[var(--accent-red)] mr-2">✓</span> <strong>Steps Reduced:</strong> 15 → 1</li> <li class="flex items-center"><span class="text-[var(--accent-red)] mr-2">✓</span> <strong>Time Per Task:</strong> 30 min → 10 sec</li> </ul> </div> </div> </div> <div class="slide"> <div class="slide-content p-6 h-full rounded-lg bg-[var(--bg-card)] border border-[var(--border-color)] flex flex-col"> <h3 class="text-lg font-bold mb-2 text-[var(--accent-red)]">Real-time Ops Tracker</h3> <p class="font-mono text-xs text-[var(--accent-red)]/80 mb-4">TIMELINE: REGULAR</p> <p class="text-sm text-gray-400 mb-4 flex-grow"><strong class="text-gray-200">Challenge:</strong> Lack of a centralized view on operations, causing data compilation delays.</p> <div class="border-t border-gray-700 pt-4 mt-auto"> <h4 class="font-bold text-white mb-2">Results:</h4> <ul class="space-y-1 text-sm text-gray-300"> <li class="flex items-center"><span class="text-[var(--accent-red)] mr-2">✓</span> <strong>Data Lag:</strong> 24 hours → Near Real-time</li> <li class="flex items-center"><span class="text-[var(--accent-red)] mr-2">✓</span> <strong>Decision Speed:</strong> Improved by 40%</li> </ul> </div> </div> </div> </div> </div> <button class="slider-button prev"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="m15 18-6-6 6-6"/></svg></button> <button class="slider-button next"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></button> </div> </section>
+        
+        <section id="responsibilities" class="py-24">
+            <h2 class="text-2xl font-bold font-heading text-white mb-12 text-center uppercase">Key Responsibilities</h2>
+            <div class="grid md:grid-cols-2 gap-8 max-w-4xl mx-auto">
+                <div>
+                    <h3 class="text-xl font-semibold text-white mb-4">The Human Logic (My Expertise)</h3>
+                    <ul class="space-y-3 text-gray-400 text-sm">
+                        <li class="flex items-start"><span class="text-[var(--accent-red)] mr-3 mt-1">▪</span> MIS & Formulated Reporting</li>
+                        <li class="flex items-start"><span class="text-[var(--accent-red)] mr-3 mt-1">▪</span> Complex Data Compilation & Analysis</li>
+                        <li class="flex items-start"><span class="text-[var(--accent-red)] mr-3 mt-1">▪</span> SLA Management & Backend Operations</li>
+                        <li class="flex items-start"><span class="text-[var(--accent-red)] mr-3 mt-1">▪</span> Advanced Excel (`PIVOT`, `SUMIFS`, etc.)</li>
+                    </ul>
+                </div>
+                <div>
+                   <h3 class="text-xl font-semibold text-white mb-4">The Machine Execution (My Force Multiplier)</h3>
+                    <ul class="space-y-3 text-gray-400 text-sm">
+                        <li class="flex items-start"><span class="text-[var(--accent-red)] mr-3 mt-1">▪</span> AI-Powered VBA Scripting</li>
+                        <li class="flex items-start"><span class="text-[var(--accent-red)] mr-3 mt-1">▪</span> Automated Dashboard & Report Creation</li>
+                        <li class="flex items-start"><span class="text-[var(--accent-red)] mr-3 mt-1">▪</span> Automated Logical Workflows</li>
+                        <li class="flex items-start"><span class="text-[var(--accent-red)] mr-3 mt-1">▪</span> Rapid Excel Solution Development</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
         <section id="contact" class="py-24"> <div class="text-center"> <h2 class="text-2xl font-bold font-heading text-white mb-4">Get In Touch</h2> <p class="max-w-xl mx-auto text-base text-gray-300 mb-8"> I'm always open to discussing new projects, creative ideas, or opportunities to be part of an ambitious vision. </p> <a href="mailto:your-email@example.com" class="inline-block bg-[var(--accent-red)] text-white font-semibold py-3 px-8 rounded-lg hover:bg-[var(--accent-red-dark)] transition-all duration-300 transform hover:scale-105"> Say Hello </a> </div> </section>
 
     </main>
