--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header id="main-header" class="fixed top-0 left-0 right-0 z-50">
         <nav class="container mx-auto px-4 sm:px-6 py-4 flex justify-between items-center">
              <div>
-                <a href="#hero" class="font-heading text-xl font-bold text-white tracking-wide">AS</a>
+                <a href="#hero" class="font-heading text-xl font-bold text-white tracking-wide">AJ</a>
             </div>
             
             <div class="hidden md:flex items-center space-x-8">
@@ -127,3 +127,4 @@
 
 </body>
 </html>
+
